✨ Add subject batch create endpoint
